# ICS415

./: README.md
1st Project/: README.md
1st Project/Project submition/: README.txt  Raytracing-checkpoint.ipynb
2nd project/: README.md
2nd project/Project/: README.txt
2nd project/Shaders/: Project2 415.pck
3rd project/: CMakeLists.txt
4th project/: README.md  index.html
Second Project/Project/: README.txt
first Project/: Raytracing.ipynb
first Project/.ipynb_checkpoints/: Raytracing-checkpoint.ipynb
first Project/Project submition/: README.txt  Raytracing-checkpoint.ipynb
